--- a/backend/package.json
+++ b/backend/package.json
@@ -24,7 +24,8 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "node-cron": "^3.0.3",
-    "openai": "^4.80.1"
+    "openai": "^4.80.1",
+    "ws": "^8.18.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.9"
