--- a/backend/env/production.env
+++ b/backend/env/production.env
@@ -14,9 +14,13 @@ JWT_SECRET=please-set-a-strong-secret
 
 # API Base URLs
 # In production, API_BASE_URL resolves to BASE_API_URL_PROD automatically
-BASE_API_URL_PROD=https://your-backend-domain.com
+BASE_API_URL_PROD=https://aiverse-sbs6.onrender.com
 # Set if static assets (images) are served from a different domain/CDN
-PUBLIC_BASE_URL=https://your-backend-domain.com
+PUBLIC_BASE_URL=https://aiverse-sbs6.onrender.com
+
+# CORS Configuration
+CORS_ORIGIN=https://aiverse-opal.vercel.app
+CORS_CREDENTIALS=true
 
 # Optional alternative fallbacks (normally leave empty)
 API_BASE_URL=
