--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,28 +10,28 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-free": "^6.5.1",
-    "@google/generative-ai": "^0.21.0",
-    "axios": "^1.6.0",
-    "bootstrap": "^5.3.3",
-    "framer-motion": "^10.16.0",
-    "react": "^18.2.0",
-    "react-bootstrap": "^2.9.0",
-    "react-dom": "^18.2.0",
-    "react-icons": "^4.12.0",
-    "react-router-dom": "^6.20.0",
-    "styled-components": "^6.1.0"
+    "@fortawesome/fontawesome-free": "*",
+    "@google/generative-ai": "*",
+    "axios": "*",
+    "bootstrap": "*",
+    "framer-motion": "*",
+    "react": "*",
+    "react-bootstrap": "*",
+    "react-dom": "*",
+    "react-icons": "*",
+    "react-router-dom": "*",
+    "styled-components": "*"
   },
   "devDependencies": {
-    "@eslint/js": "^9.0.0",
-    "@types/react": "^18.2.0",
-    "@types/react-dom": "^18.2.0",
-    "@vitejs/plugin-react": "^4.2.0",
-    "eslint": "^8.55.0",
-    "eslint-plugin-react": "^7.33.0",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.5",
-    "globals": "^13.24.0",
-    "vite": "^5.0.0"
+    "@eslint/js": "*",
+    "@types/react": "*",
+    "@types/react-dom": "*",
+    "@vitejs/plugin-react": "*",
+    "eslint": "*",
+    "eslint-plugin-react": "*",
+    "eslint-plugin-react-hooks": "*",
+    "eslint-plugin-react-refresh": "*",
+    "globals": "*",
+    "vite": "*"
   }
 }
